# tiralabra

./: README.md  index.py  pyproject.toml  tasks.py  tira4.mid
data/: AnthropologyParker.mid  Nimetön.mid  bach_bourree.mid  bach_bourree2.mid  bach_bourree3.mid  chords.mid  chords1.mid  d2.mid  dimiskaala1.mid  mario.mid  materiaalia.mid  materiaalia1.mid  materiaalia2.mid  materiaalia3.mid  midi_io_test_out.mid  rytmi.mid  test.mid  testaus1.mid  testi.mid  testi1.mid  testi2.mid  testi3.mid  testi4.mid  testi5.mid
data/Laadullinen testaus/: m1.mid  m2.mid  m3.mid  m4.mid  m5.mid  rytmi.mid  t1.mid  t2-2.mid  t2-3.mid  t2.mid  t3-2.mid  t5-1-1.mid  t5-1.mid  t5-2.mid  t5-3.mid  t5-4-1.mid  t5-4-2.mid  t5-4-2a.mid  t5-4-2b.mid  t5-4.mid
data/Moniääniset/: d3.mid  example_4_voices.mid  g1.mid  g2.mid  midi.mid  midi1.mid  simple_harmony.mid
data/testit/: c->d-test.mid  c->d-test_long.mid  terssit.mid  terssit_test.mid  testi1.mid  testi1out.mid  testi2.mid  testi2out.mid  testi3.mid  testi3_1_out.mid  testi3_2_out.mid  testi3_3_out.mid  testirytmi.mid
docs/: Kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  testikattavuusdokumentti.md  toteutusdokumentti.md
docs/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: markov_chain.py  midiIO.py  midi_io.py  service.py  trie.py  ui.py
src/tests/: markov_chain_test.py  midi_test.py  trie_test.py
