[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Jorma Valjakka <jorma.valjakka@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
mido = "^1.2.10"
MIDIUtil = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
